client: fixed css alignment problem in profile > groups

--- a/Client/src/less/main.less
+++ b/Client/src/less/main.less
@@ -110,13 +110,9 @@
   width: 170px;
   height: 300px;
   padding-top: 0;
-  margin-left: 20px;
+  margin-right: 20px;
   overflow: hidden;
   vertical-align: top;
-}
-
-.card.people:first-child {
-  margin-left: 0;
 }
 
 .card.people .card-top {
